--- a/index.html
+++ b/index.html
@@ -1,91 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link rel="stylesheet" href="./styles/style.css">
-    <script src="https://kit.fontawesome.com/d45ec12192.js" crossorigin="anonymous"></script>
-    <title>CV</title>
-    <base target="_blank">
-</head>
-<body>
-    <header class="person">
-        <figure class="item">
-            <img class="person__avatar" src="./img/avatar.png"
-                 alt="avatar">
-        </figure>
-        <section class="person__contacts">
-            <ul>
-                <li><i class="icon fas fa-map-marker-alt"></i>Moscow</li>
-                <li><i class="icon fas fa-phone-square-alt"></i>+7-(985)-229-22-86</li>
-                <li><a class="icon email" href="mailto:rassohenko.kristina@yandex.ru">
-                    <i class="icon fas fa-envelope">
-                    </i>rassohenko.kristina@yandex.ru</a></li>
-                <li><i class="icon fab fa-telegram"></i>@rasskris</li>
-            </ul>
-        </section>
-    </header>
-    <main class="info">
-        <section class="info__item info__summary">
-            <h2>Summary</h2>
-            <p>JavaScript Frontend Developer is seeking an opportunity to extend my web development skills and knowledge.
-            </p>
-        </section>
-        <section class="info__item info__skills">
-            <h2>Skills</h2>
-            <div>
-              <h4>Languages</h4>
-              <ul class="language">
-                <li>JavaScript</li>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>SQL</li>
-              </ul>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="./css/reset.css" />
+		<link rel="stylesheet" href="./css/style.css" />
+		<title>CV</title>
+	</head>
+	<body>
+		<header class="person">
+			<div class="person__wrapper">
+				<figure class="person__avatar">
+					<img class="person__avatar-pic" src="./img/person-avatar.png" alt="avatar" />
+				</figure>
+                <h1 class="person__name">Rassoshenko Kristina</h1>
+				<ul class="person__contacts">
+					<li class="person__contacts_item">
+						<img
+							src="./img/svg/location-icon.svg"
+							alt="Location"
+							class="person__contacts_item-icon"
+						/>Moscow
+					</li>
+					<li class="person__contacts_item">
+						<img
+							src="./img/svg/phone-icon.svg"
+							alt="Phone"
+							class="person__contacts_item-icon"
+						/>+7-(985)-229-33-86
+					</li>
+					<li class="person__contacts_item">
+						<img
+							src="./img/svg/email-icon.svg"
+							alt="Email"
+							class="person__contacts_item-icon"
+						/>rassoshenko.kristina@yandex.ru
+					</li>
+					<li class="person__contacts_item">
+						<img
+							src="./img/svg/telegram-icon.svg"
+							alt="Telegram"
+							class="person__contacts_item-icon"
+						/>@rasskris
+					</li>
+				</ul>
+			</div>
+		</header>
+		<main class="info">
+            <div class="info__wrapper">
+                <section class="info__section summary">
+                    <div class="summary__wrapper">
+                        <h2 class="summary__title section-title">Summary</h2>
+                        <p class="summary__desc">
+                            JavaScript Frontend Developer is seeking an opportunity to extend my
+                            web development skills and knowledge.
+                        </p>
+                    </div>
+                </section>
+                <section class="info__section skills">
+                    <div class="skills__wrapper">
+                        <h2 class="skills__title section-title">Skills</h2>
+                        <div class="skills__items">
+                        <div class="skills__item">
+                            <h4>Languages</h4>
+                            <ul class="skills__item-langauges">
+                                <li>JavaScript</li>
+                                <li>HTML</li>
+                                <li>CSS</li>
+                                <li>SQL</li>
+                            </ul>
+                        </div>
+                        <div class="skills__item">
+                            <h4>Frameworks</h4>
+                            <ul class="skills__item-frameworks">
+                                <li>Express.js</li>
+                                <li>Bootstrap</li>
+                            </ul>
+                        </div>
+                        <div class="skills__item">
+                            <h4>Librarie/API</h4>
+                            <ul class="skills__item-librarie">
+                                <li>React</li>
+                                <li>Redux</li>
+                                <li>Node.js</li>
+                            </ul>
+                        </div>
+                        </div>
+                    </div>
+                </section>
+                <section class="info__section experience">
+                    <div class="experience__wrapper">
+                    <h2 class="experience__title section-title">Experience</h2>
+                    <ul class="experience__list">
+                        <li class="experience__list-item">
+                            <a href="https://github.com/Rasskris/Brain-Games" target="_blank">Brain Games.</a>A set of mini math CLI games.
+                        </li>
+                        <li class="experience__list-item">
+                            <a href="https://github.com/Rasskris/Generator-of-differences" target="_blank">Generator of differences.</a
+                            >This CLI utility compares two configuration files and displays the
+                            result of the comparison in the console.
+                        </li>
+                    </ul>
+                    </div>
+                </section>
+                <section class="info__section education">
+                    <div class="education__wrapper">
+                    <h2 class="education__title section-title">Education</h2>
+                    <ul class="education__list">
+                        <li class="education__list-item">
+                            Course "Frontend Developer", 2020-2021,
+                            <a href="https://ru.hexlet.io/programs/frontend" target="_blank">Hexlet</a>
+                        </li>
+                        <li class="education__list-item">
+                            Teacher of elementary education, 2016-2018, Moscow
+                            Pedagogical State University (MPGU)
+                        </li>
+                        <li class="education__list-item">
+                            Resource-saving processes in chemical technology,
+                            2012-2016,Peoples' Friendship University of Russia (RUDN)
+                        </li>
+                    </ul>
+                    </div>
+                </section>
+                <section class="info__section english">
+                    <h2 class="english__title section-title">English</h2>
+                    <p class="english__level">A1+</p>
+                </section>
             </div>
-            <div>
-              <h4>Frameworks</h4>
-              <ul class="framework">
-                <li>Express.js</li>
-                <li>Bootstrap</li>
-              </ul> 
+		</main>
+		<footer class="footer">
+            <div class="footer__wrapper">
+                <a href="https://rs.school/js/" class="footer__link footer__link-rs" target="_blank"><img src="./img/svg/rs_school_logo.svg" alt="rs_school_logo" class="footer__link-rs-pic"></a>
+                <p class="footer__owner">2021, Rassoshenko Kristina</p>
+                <a href="https://github.com/Rasskris" class="footer__link footer__link-github" target="_blank"><img src="./img/svg/github-icon.svg" alt="github-profile" class="footer__link-github-pic"></a>
             </div>
-            <div>
-              <h4>Librarie/API</h4>
-              <ul class="librarie/api">
-                <li>React</li>
-                <li>Redux</li>
-                <li>Node.js</li>
-              </ul>
-            </div>
-        </section>
-        <section class="info__item info__experience">
-            <h2>Experience</h2>
-            <ul>
-                <li><a href="https://github.com/Rasskris/Brain-Games"><b>Brain Games.</b></a>A set of mini math CLI games.</li>
-                <hr>
-                <li><a href="https://github.com/Rasskris/Generator-of-differences"><b>Generator of differences.</b></a>This CLI utility compares two configuration files and displays the result of the comparison in the console.</li>
-            </ul>
-        </section>
-        <section class="info__item info__education">
-            <h2>Education</h2>
-            <ul>
-                <li>Course "Frontend Developer", <b>2020-2021,</b> <a href="https://ru.hexlet.io/programs/frontend">Hexlet</a></li>
-                <hr>
-                <li>Teacher of elementary education, <b>2016-2018,</b> Moscow Pedagogical State University (MPGU)</li>
-                <hr>
-                <li>Resource-saving processes in chemical technology, <b>2012-2016,</b>
-                    Peoples' Friendship University of Russia (RUDN)</li>
-            </ul>
-        </section>
-        <section class="info__item info__english">
-            <h2>English</h2>
-            <h4>A1+</h4>
-        </section>
-    </main>
-    <footer class="footer">
-      <p>Rassoshenko Kristina, 2021.</p>
-    </footer>
-</body>
+        </footer>
+	</body>
 </html>
